vm.c
@@ -1181,6 +1181,10 @@ rb_proc_ractor_make_shareable(VALUE self)
         rb_proc_t *proc = (rb_proc_t *)RTYPEDDATA_DATA(self);
         if (proc->block.type != block_type_iseq) rb_raise(rb_eRuntimeError, "not supported yet");
 
+        if (!rb_ractor_shareable_p(vm_block_self(&proc->block))) {
+            rb_raise(rb_eRactorIsolationError, "Proc's self is not shareable");
+        }
+
         VALUE read_only_variables = Qfalse;
 
         if (iseq->body->outer_variables) {
